--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
                     <input class="header-search" type="text"><img class="header-search-img" src="img/header/search.png" alt="">
                     <div class="header-top-right">
                         <ul>
-                            <li><a href="#">登录</a></li>
+                            <li><a id="login" href="login.html">登录</a></li>
                             <li><a href="#">邮箱</a></li>
                             <li><a href="#">备案</a></li>
                             <li><a href="#">文档</a></li>
@@ -46,7 +46,7 @@
                 <div class="header-nav">
                     <ul>
                         <li><a href="#">最新活动</a></li>
-                        <li><a href="#">产品</a></li>
+                        <li><a href="details.html">产品</a></li>
                         <li><a href="#">解决方案</a></li>
                         <li><a href="#">定价</a></li>
                         <li><a href="#">ET大脑</a></li>
@@ -56,7 +56,7 @@
                         <li><a href="#">支持与服务</a></li>
                         <li><a href="#">合作伙伴</a></li>
                     </ul>
-                    <a class="header-nav-register" href="#">免费注册</a>
+                    <a id="register" class="header-nav-register" href="register.html">免费注册</a>
                 </div>
                 <!-- hb悬停 导航框 -->
                 <div class="header-hover">
@@ -555,6 +555,7 @@
          </p>
       </div>
    </div>
+   <script src="js/jquery.min.js"></script>
     <script src="js/header.js"></script>
     <script src="js/index.js"></script>
 </body>
