--- a/public/register.html
+++ b/public/register.html
@@ -34,7 +34,8 @@
             <p><input name="uname" type="text" placeholder="设置会员名"><span class="form-init small hide"></span></p>
             <p><input name="upwd" type="password" placeholder="设置你的登录密码"><span class="form-init small hide"></span></p>
             <p><input class="again" type="password" placeholder="请再次输入你的密码"><span class="form-init small hide"></span></p>
-            <p class="d-flex "><span class="num-code">+86</span> <input class="num" type="text" placeholder="请输入你的手机号">
+            <p class="d-flex "><span class="num-code">+86</span><input class="num" type="text" placeholder="请输入你的手机号">
+                <span class="phone-init"></span>
             </p>
             <div class="slide">
                 <div class="slide-bg">
@@ -42,9 +43,9 @@
                     <span>请点击按钮完成验证</span>
                 </div>
             </div>
-            <input class="agree" type="submit" value="同意条款并注册">
+            <input class="agree" type="button"  value="同意条款并注册">
             <p>
-                <input class="checkbox" type="checkbox">
+                <input class="checkbox" type="checkbox" checked>
                 <a class="clause" href="#">《阿里云网站服务条款》</a>
                 <a class="clause" href="#">《法律声明和隐私权政策》</a>
             </p>
@@ -53,6 +54,7 @@
     </div>
     <!-- footer -->
     <script src="js/jquery.min.js"></script>
+    <script src="js/ajax.js"></script>
     <script src="js/register.js"></script>
 </body>
 
