--- a/public/title.html
+++ b/public/title.html
@@ -6,7 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/boot.css">
+  <link rel="stylesheet" href="css/base.css">
   <link rel="stylesheet" href="css/title.css">
+  <link rel="stylesheet" href="css/footer.css">
   <script src="js/jquery.min.js"></script>
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
@@ -28,7 +30,7 @@
             <input class="header-search" type="text" placeholder="hide"><img class="header-search-img" src="img/header/search.png" alt="">
             <div class="header-top-right">
                 <ul>
-                    <li><a href="#">登录</a></li>
+                    <li><a id="title-login" href="#"><img src="img/header/liu.png"></a></li>
                     <li><a href="#">邮箱</a></li>
                     <li><a href="#">备案</a></li>
                     <li><a href="#">文档</a></li>
@@ -338,6 +340,8 @@
     </div>
   </div>
   <!-- footer -->
+  <footer id="footer"></footer>
+  <script src="js/footer.js"></script>
 </body>
 
 </html>
