--- a/public/details.html
+++ b/public/details.html
@@ -23,7 +23,7 @@
         <!-- 头部 bar -->
         <div class="header-top">
             <div class="header-index-img">
-                <a href="#">
+                <a id="index" href="javascript:">
                     <img src="img/header/aliyun1.gif" alt="">
                     <img src="img/header/logo.png" alt="">
                 </a>
@@ -94,7 +94,7 @@
                             <p class="h6">系列四云服务器，I/O优化性能更强低至
                                 <span>0.73元/日</span>，搭建网站/应用优选</p>
                             <p>
-                                <a class="detail-link" href="#">立即抢购</a>
+                                <a class="detail-link" href="title.html">立即抢购</a>
                             </p>
                         </div>
                         <div class="col-3 detail-img">
@@ -695,17 +695,17 @@
         </div>
 
         <!-- 大赛 -->
-        <div id="detail-five" class="">
+        <div id="detail-five" class="hide">
             <div class="detail-five-title">
                 <h2>数据大赛（天池）</h2>
                 <p>天池大数据竞赛是由阿里云主办，面向全球新生代力量的高端算法竞赛。通过开放海量数据和阿里云分布式计算平台，大赛让所有参与者有机会运用其设计的算法解决各类社会生活问题和商业世界中的实际问题。</p>
             </div>
             <div class="detail-five-main">
                 <ul class="detail-five-list">
-                    <li>算法大赛</li>
-                    <li>可视化大赛</li>
-                    <li>程序设计大赛</li>
-                    <li>API大赛</li>
+                    <li class="dis key" data-toggle=".tbody1">算法大赛</li>
+                    <li class="dis" data-toggle=".tbody2">可视化大赛</li>
+                    <li class="dis" data-toggle=".tbody3">程序设计大赛</li>
+                    <li class="dis" data-toggle=".tbody4">API大赛</li>
                 </ul>
                 <div>
                     <table class="detail-five-table">
@@ -753,22 +753,6 @@
                                 <td>CNY：300000</td>
                                 <td><a href="#">查看比赛</a></td>
                             </tr>
-                        </tbody>
-                        <tbody class="tbody2">
-                            <tr>
-                                <td>
-                                    <h6>【公益云图】数据可视化创新大赛</h6>
-                                    <p>阿里巴巴公益基金会，公共气象服务中心</p>
-                                </td>
-                                <td>已结束</td>
-                                <td>2016/09/25</td>
-                                <td>CNY：360000</td>
-                                <td>
-                                    <a href="#">查看比赛</a>
-                                </td>
-                            </tr>
-                        </tbody>
-                        <tbody class="tbody3">
                             <tr>
                                 <td>
                                     <h6>阿里云 API 应用创新大赛</h6>
@@ -782,7 +766,57 @@
                                 </td>
                             </tr>
                         </tbody>
-                        <tbody class="tbody4">
+                        <tbody class="tbody2 hide">
+                            <tr>
+                                <td>
+                                    <h6>【公益云图】数据可视化创新大赛</h6>
+                                    <p>阿里巴巴公益基金会，公共气象服务中心</p>
+                                </td>
+                                <td>已结束</td>
+                                <td>2016/09/25</td>
+                                <td>CNY：360000</td>
+                                <td>
+                                    <a href="#">查看比赛</a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <h6>中间件性能挑战赛</h6>
+                                    <p>阿里巴巴集团</p>
+                                </td>
+                                <td>已结束</td>
+                                <td>2016/07/11</td>
+                                <td>CNY：300000</td>
+                                <td><a href="#">查看比赛</a></td>
+                            </tr>
+                        </tbody>
+                        <tbody class="tbody3 hide">
+                            <tr>
+                                <td>
+                                    <h6>阿里云 API 应用创新大赛</h6>
+                                    <p>API 经济</p>
+                                </td>
+                                <td>进行中</td>
+                                <td>2018/02/14</td>
+                                <td>CNY：1365000</td>
+                                <td>
+                                    <a href="#">立即报名</a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <h6>阿里云 API 应用创新大赛</h6>
+                                    <p>API 经济</p>
+                                </td>
+                                <td>进行中</td>
+                                <td>2018/02/14</td>
+                                <td>CNY：1365000</td>
+                                <td>
+                                    <a href="#">立即报名</a>
+                                </td>
+                            </tr>
+                        </tbody>
+                        <tbody class="tbody4 hide">
                             <tr>
                                 <td>
                                     <h6>阿里云 API 应用创新大赛</h6>
