--- a/public/register.html
+++ b/public/register.html
@@ -14,7 +14,7 @@
 <body class="body">
     <!-- top -->
     <header class="header">
-        <a href="#">
+        <a href="index.html">
             <img src="img/index/aliyun.gif" alt="">
             <img src="img/index/logo.png" alt="">
         </a>
